Quick fix for removing scrollbar calculations

--- a/src/styles/layout/foundation.less
+++ b/src/styles/layout/foundation.less
@@ -12,7 +12,6 @@
   top: 0px;
   left: 0px;
   width: 100%;
-  height: 10000px;
   overflow: hidden;
   .transition(e('left 0.3s ease, margin-left 0.3s ease'));
 }
